<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow_light"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add"
            android:fontFamily="@font/gilroy_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_placeholder"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/img_place_holder"/>

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:fontFamily="@font/gilroy_bold"
        android:backgroundTint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_camera"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:fontFamily="@font/gilroy_bold"
        android:backgroundTint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/image_placeholder"
        app:layout_constraintStart_toEndOf="@id/button_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/desc_hint"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/button_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:fontFamily="@font/gilroy_bold"
        android:backgroundTint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/edit_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
